Swagger Docuemntation Fix
